<resources>
    <string name="app_name">DummyDictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newWord_text">Nueva palabra</string>
    <string name="definition_text">Definición</string>
    <string name="add_word">Agregar Palabra</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
</resources>