<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddWordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newWord_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/new_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_gap"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginRight="@dimen/default_gap"
                android:hint="@string/newWord_text" />

            <EditText
                android:id="@+id/new_definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_gap"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginRight="@dimen/default_gap"
                android:hint="@string/definition_text" />

            <Button
                android:id="@+id/add_word_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_word" />

        </LinearLayout>
    </FrameLayout>
</layout>