<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.solis.dummydictionary.ui.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/double_gap"
            android:layout_marginEnd="@dimen/default_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dictionary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogin"
            app:startIconDrawable="@drawable/ic_baseline_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.userField}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwpord_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_text_field"
            app:startIconDrawable="@drawable/ic_baseline_key">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.passwordField}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:onClick="@{()->viewModel.onLogin()}"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwpord_text_field" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            app:layout_constraintVertical_bias="0.326" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>